# fanoosai

./: .gitignore  README.md  SPEC_prompt_management.md  requirements.txt
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  structure.txt  test_reg.py
backend/app/: dependencies.py  main.py  observability.py  retention.py  scheduler.py  worker.py
backend/app/analytics/: extra_router.py  router.py  schema.py
backend/app/auth/: fastapi_users.py  jwt.py  password.py  router.py  sms_service.py
backend/app/core/: config.py
backend/app/database/: connection.py  models.py
backend/app/infrastructure/: redis_client.py  run_queue.py
backend/app/projects/: ai_models_router.py  ai_models_schema.py  ai_runs_schema.py  prompt_router.py  router.py  schema.py
backend/app/repositories/: ai_model_repository.py  ai_run_repository.py  project_repository.py  prompt_repository.py  user_repository.py
backend/app/services/: ai_model_service.py  ai_run_service.py  ai_service.py  auth_service.py  automatic_run_service.py  brand_extraction_service.py  brand_persistence_service.py  project_service.py  prompt_service.py
backend/app/users/: manager.py  model.py  router.py  schema.py  service.py
backend/migrations_old/: 001_create_brands_and_run_brands.sql
backend/migrations_old/versions/: 20250308_add_ai_run_extraction_fields.py
backend/tests/: test_ai_models.py  test_ai_runs.py  test_brand_extraction_service.py  test_brand_persistence_service.py  test_critical_security.py  test_daily_prompt_execution.py  test_high_security.py  test_history_api.py  test_openapi_httpbearer.py  test_project_creation.py
deploy/prometheus/: alerts.yml
docs/: user-flow-ux.md  ux-prompts.md
docs/runbooks/: fanoosai-ai-provider.md  fanoosai-api-errors.md
frontend/: index.html  netlify.toml  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: date-picker.tsx  profile-dropdown.tsx  (+1 more)
scripts/: auth_setup.py  load_test.py
tasks/: ai_models_plan.md  plan.md  project_creation_plan.md  todo.md
templates/: env.example
(+30 files in other folders)
