[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanoosai-backend"
version = "0.1.0"
description = "FastAPI backend for FanoosAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.28.0",
    "bcrypt>=4.0.1",
    "email-validator>=2.0.0",
    "fastapi>=0.100.0",
    "fastapi-users>=12.1.0",
    "fastapi-users-db-sqlalchemy>=6.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.22.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
